# ML-22_evaluation-selection

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
poetry-task-9/: pyproject.toml
poetry-task-9/tests/: test_poetry_task_9.py
poetry_task_9/: data.py  pipeline.py  train.py
src/poetry_task_9/: data.py  pipeline.py
tests/: input_test.py  test_poetry_task_9.py
