[tool.poetry]
name = "poetry-task-9"
version = "0.1.0"
description = ""
authors = ["lizaveta56k <lizaveta.kaliaha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
