[tool.poetry]
name = "poetry_task_9"
version = "0.1.0"
description = "Task 9 project"
authors = ["lizaveta56k <lizaveta.kaliaha@gmail.com>"]

[tool.poetry.scripts]
train = "poetry_task_9.train:train"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
